Joda-Time version 2.4
---------------------

Joda-Time is a date and time handling library that seeks to replace the JDK
Date and Calendar classes.

This release contains enhancements, bug fixes and a time zone update.
The release runs on JDK 5 or later.

Joda-Time is licensed under the business-friendly Apache License Version 2.
This is the same license as all of Apache, plus other open source projects such as Spring.
The intent is to make the code available to the Java community with the minimum
of restrictions. If the license causes you problems please contact the mailing list.

**  Please also check out our related projects   **
** http://www.joda.org/joda-time/related.html **


Enhancements since 2.3
----------------------
- LocalDate.hashCode()
  Remove unnecessary volatile on instance variable [#68]
  LocalDate hash code meets criteria of the racy single-check idiom


Compatibility with 2.3
----------------------
Build system - Yes

Binary compatible - Yes

Source compatible - Yes

Serialization compatible - Yes

Data compatible - Yes, except
 - DateTimeZone data updated to version 2013d

Semantic compatible - Yes


Deprecations since 2.3
----------------------


Bug fixes since 2.3
-------------------
- Better Javadoc for parsing of numbers in format patterns [#60]

- Remove uncaughtException calls [#59]
  Previously the code called ThreadGroup.uncaughtException() which was invalid

- Better Javadoc for thread saefty of DateTimeUtils [#67]


Scala
--------
Joda-Time uses annotations from Joda-Convert.
In the Java programming language, this dependency is optional, however in Scala it is not.
Scala users must manually add the Joda-Convert v1.2 dependency.


Feedback
--------
Feedback is best received using GitHub issues and Pull Requests.
https://github.com/JodaOrg/joda-time/

Feedback is also welcomed via the joda-interest mailing list.

The Joda team
http://www.joda.org/joda-time/