@@ -130,6 +130,10 @@
       <name>Michael Plump</name>
     </contributor>
     <contributor>
+      <name>Bjorn Pollex</name>
+      <url>https://github.com/bjoernpollex</url>
+    </contributor>
+    <contributor>
       <name>Ryan Propper</name>
     </contributor>
     <contributor>
